Add premake scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-cmake-build-release
-cmake-build-debug
-.idea
-.vscode
-.cache
-/.vs
-/out/build
-/library/bin/release
-/loader/bin/release
-/out
-/loader/target
-/build
+.idea/
+_bin/
+_project/
